--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
@@ -13,9 +14,11 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
